Исправлены ошибки: CSS синтаксис, опечатки, добавлен .gitignore и requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Environment variables
 p.env
-.env
 *.env
+.env
 
 # Python
 __pycache__/
@@ -12,6 +12,7 @@ __pycache__/
 venv/
 env/
 ENV/
+.venv/
 
 # IDE
 .vscode/
@@ -23,4 +24,3 @@ ENV/
 # OS
 .DS_Store
 Thumbs.db
-
