--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,46 +1,75 @@
+# Секреты и переменные окружения
+.env
+*.env
+p.env
+.env.local
+.env.*.local
+
+# Логи
+*.log
+bot.log
+api.log
+*.log.*
+
+# База данных
+*.db
+database.db
+*.sqlite
+*.sqlite3
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # Virtual Environment
 venv/
+.venv/
 env/
 ENV/
-.venv
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Database
-database.db
-database.db-journal
-*.db
-*.db-journal
-*.sqlite
-*.sqlite3
+env.bak/
+venv.bak/
 
 # IDE
-.vscode/
 .idea/
+.vscode/
 *.swp
 *.swo
 *~
-
-# Logs
-*.log
-logs/
-
-# OS
 .DS_Store
-Thumbs.db
 
-# Testing
+# Pytest
 .pytest_cache/
 .coverage
 htmlcov/
 
+# MyPy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Временные файлы
+*.tmp
+*.bak
+*.swp
+.~*
