Fix: use Python 3.12 and update dependencies for compatibility
- Set Python 3.12 in nixpacks.toml (SQLAlchemy issue with 3.13)
- Update SQLAlchemy 2.0.23 → 2.0.36 (Python 3.12 compatible)
- Update FastAPI 0.104.1 → 0.115.0
- Update uvicorn 0.24.0 → 0.32.0
- Update aiosqlite 0.19.0 → 0.20.0
- Set greenlet to 3.1.1 (exact version)

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,8 +2,11 @@
 nixPkgs = ["python312"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
 
 [start]
 cmd = "uvicorn api_server:app --host 0.0.0.0 --port $PORT"
+
+[variables]
+PYTHON_VERSION = "3.12"
 
