--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 python-telegram-bot==21.0.1
 python-dotenv==1.0.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-aiosqlite==0.19.0
-greenlet>=3.1.1
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+sqlalchemy==2.0.36
+aiosqlite==0.20.0
+greenlet==3.1.1
 
