--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,3 +1,6 @@
+[variables]
+NIXPACKS_PYTHON_VERSION = "3.12"
+
 [phases.setup]
 nixPkgs = ["python312"]
 
@@ -5,8 +8,5 @@ nixPkgs = ["python312"]
 cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
 
 [start]
-cmd = "uvicorn api_server:app --host 0.0.0.0 --port $PORT"
-
-[variables]
-PYTHON_VERSION = "3.12"
+cmd = "python -m uvicorn api_server:app --host 0.0.0.0 --port ${PORT:-8000}"
 
