--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,6 +15,6 @@ services:
     # Mount source code for live reload
     volumes:
       - ./frontend:/usr/share/nginx/html
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8080:80"  # Use different port in development
