🐳 Docker: исправлен build context для frontend сервиса
- Изменен context в docker-compose.yml с ./frontend на .
- Обновлен путь к nginx.conf в frontend/Dockerfile
- Теперь nginx.conf доступен во время сборки frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
   # Frontend with nginx
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: frontend/Dockerfile
     container_name: telegram-mini-app-frontend
     restart: unless-stopped
     ports:
