🤖 Docker: добавлен сервис bot в docker-compose
- Добавлен новый сервис 'bot' в docker-compose.yml
- Настроена конфигурация для разработки в docker-compose.override.yml
- Бот теперь запускается автоматически вместе с другими сервисами
- Обновлена документация в README.md с описанием всех сервисов

Теперь при запуске docker compose up -d запускаются:
- backend: API сервер
- frontend: веб-сервер
- bot: Telegram бот
- db: база данных

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,3 +18,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8080:80"  # Use different port in development
+
+  bot:
+    # Mount source code for live reload
+    volumes:
+      - ./backend:/app
+    environment:
+      - PYTHONPATH=/app
+    # Override command to restart on changes
+    command: ["python", "main.py"]
