--- a/docker-env.example
+++ b/docker-env.example
@@ -5,7 +5,7 @@
 BOT_TOKEN=your_bot_token_here
 
 # Web App URL (for production, use your domain)
-WEB_APP_URL=https://yourdomain.com
+WEB_APP_URL=https://booking-cab.ru
 
 # Database configuration (optional, defaults to SQLite file)
 # DATABASE_URL=sqlite:///./database.db
@@ -18,4 +18,4 @@ API_PORT=8000
 LOG_LEVEL=INFO
 
 # CORS Origins (for development)
-CORS_ORIGINS=http://localhost,http://127.0.0.1:3000,http://127.0.0.1:5173,https://yourdomain.com
+CORS_ORIGINS=http://localhost,http://127.0.0.1:3000,http://127.0.0.1:5173,https://booking-cab.ru
