--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,7 +17,9 @@ services:
       - ./frontend:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "8080:80"  # Use different port in development
+      - "80:80"    # HTTP
+      - "443:443"  # HTTPS (если сертификаты смонтированы)
+    # Для development можно закомментировать HTTPS порт
 
   bot:
     # Mount source code for live reload
