--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,25 @@
+# HTTP to HTTPS redirect
 server {
     listen 80;
-    server_name localhost;
+    server_name booking-cab.ru www.booking-cab.ru;
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name booking-cab.ru www.booking-cab.ru;
+
+    # SSL certificates
+    ssl_certificate /etc/letsencrypt/live/booking-cab.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/booking-cab.ru/privkey.pem;
+
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
     # Root directory for static files
     root /usr/share/nginx/html;
@@ -23,8 +42,10 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Content-Security-Policy "default-src 'self' https: data: blob: 'unsafe-inline'" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # API proxy to backend
     location /api/ {
@@ -39,7 +60,7 @@ server {
         proxy_cache_bypass $http_upgrade;
 
         # CORS headers for API
-        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Origin https://booking-cab.ru always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, X-Init-Data, Authorization" always;
 
