🔒 SSL: монтирование сертификатов в Docker контейнер
- Добавлено монтирование SSL сертификатов в docker-compose.override.yml
- Обновлены пути к сертификатам в nginx.conf для контейнера
- Сертификаты теперь доступны внутри Docker контейнера
- HTTPS заработает после перезапуска сервисов

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,8 @@ server {
     server_name booking-cab.ru www.booking-cab.ru;
 
     # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/booking-cab.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/booking-cab.ru/privkey.pem;
+    ssl_certificate /etc/ssl/certs/ssl-cert.pem;
+    ssl_certificate_key /etc/ssl/private/ssl-cert.key;
 
     # SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
