--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -16,10 +16,12 @@ services:
     volumes:
       - ./frontend:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      # Mount SSL certificates from host
+      - /etc/letsencrypt/live/booking-cab.ru/fullchain.pem:/etc/ssl/certs/ssl-cert.pem
+      - /etc/letsencrypt/live/booking-cab.ru/privkey.pem:/etc/ssl/private/ssl-cert.key
     ports:
       - "80:80"    # HTTP
-      - "443:443"  # HTTPS (если сертификаты смонтированы)
-    # Для development можно закомментировать HTTPS порт
+      - "443:443"  # HTTPS
 
   bot:
     # Mount source code for live reload
