--- a/nginx.conf
+++ b/nginx.conf
@@ -60,9 +60,28 @@ server {
         proxy_cache_bypass $http_upgrade;
 
         # CORS headers for API
-        add_header Access-Control-Allow-Origin https://booking-cab.ru always;
+        # CORS for Telegram Web App and browser
+        set $cors_origin "";
+        if ($http_origin ~* "^https?://(.*\.)?telegram\.org$") {
+            set $cors_origin $http_origin;
+        }
+        if ($http_origin ~* "^https?://(.*\.)?telegram\.me$") {
+            set $cors_origin $http_origin;
+        }
+        if ($http_origin ~* "^https?://(.*\.)?t\.me$") {
+            set $cors_origin $http_origin;
+        }
+        if ($http_origin = "https://booking-cab.ru") {
+            set $cors_origin $http_origin;
+        }
+        if ($cors_origin = "") {
+            set $cors_origin "https://booking-cab.ru";
+        }
+
+        add_header Access-Control-Allow-Origin $cors_origin always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type, X-Init-Data, Authorization" always;
+        add_header Access-Control-Allow-Credentials true always;
 
         # Handle preflight requests
         if ($request_method = 'OPTIONS') {
