fix: добавить монтирование .env файла в backend и bot контейнеры
- Добавить volume монтирование ./.env:/app/.env для backend сервиса
- Добавить volume монтирование ./.env:/app/.env для bot сервиса
- Теперь .env файл из корневой папки проекта будет доступен в контейнерах

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - WEB_APP_URL=${WEB_APP_URL:-http://localhost}
     volumes:
       - backend_data:/app/data
+      - ./.env:/app/.env
     networks:
       - app-network
     depends_on:
@@ -56,6 +57,7 @@ services:
       - WEB_APP_URL=${WEB_APP_URL:-http://localhost}
     volumes:
       - backend_data:/app/data
+      - ./.env:/app/.env
     networks:
       - app-network
     depends_on:
