fix: добавить монтирование .env в development override
- Добавить ./.env:/app/.env для backend в override
- Добавить ./.env:/app/.env для bot в override
- Теперь переменные окружения работают и в development режиме

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,6 +6,7 @@ services:
     # Mount source code for live reload
     volumes:
       - ./backend:/app
+      - ./.env:/app/.env
     environment:
       - PYTHONPATH=/app
     # Override command to use reload
@@ -27,6 +28,7 @@ services:
     # Mount source code for live reload
     volumes:
       - ./backend:/app
+      - ./.env:/app/.env
     environment:
       - PYTHONPATH=/app
     # Override command to restart on changes
