--- a/nginx.conf
+++ b/nginx.conf
@@ -49,6 +49,10 @@ server {
 
     # API proxy to backend
     location /api/ {
+        # Логирование API запросов
+        access_log /var/log/nginx/api_access.log;
+        error_log /var/log/nginx/api_error.log;
+
         proxy_pass http://backend:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -71,11 +75,20 @@ server {
         if ($http_origin ~* "^https?://(.*\.)?t\.me$") {
             set $cors_origin $http_origin;
         }
+        if ($http_origin ~* "^https?://web\.telegram\.org$") {
+            set $cors_origin $http_origin;
+        }
+        if ($http_origin ~* "^https?://(.*\.)?web\.telegram\.org$") {
+            set $cors_origin $http_origin;
+        }
         if ($http_origin = "https://booking-cab.ru") {
             set $cors_origin $http_origin;
         }
+        if ($http_origin = "http://localhost:8000") {
+            set $cors_origin $http_origin;
+        }
         if ($cors_origin = "") {
-            set $cors_origin "https://booking-cab.ru";
+            set $cors_origin "*";
         }
 
         add_header Access-Control-Allow-Origin $cors_origin always;
