feat: полная переработка backend системы управления записями
- Переработаны модели базы данных (User, Service, Client, Appointment, WorkingHours)
- Создан модульный API с разделением на фичи (profiles, services, clients, appointments, schedule)
- Добавлена JWT аутентификация и улучшена Telegram аутентификация
- Реализована система обработки ошибок и валидации
- Улучшена конфигурация с поддержкой разных окружений
- Обновлены зависимости и улучшена контейнеризация
- Добавлена автоматическая документация API (Swagger/OpenAPI)

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,11 +1,15 @@
 # ========================================
-# Конфигурация Telegram бота и API сервера
+# Booking Cabinet Backend Configuration
 # ========================================
-# 
+#
 # Инструкция:
 # 1. Скопируйте этот файл и назовите его ".env"
 # 2. Заполните значения ниже
 # 3. НЕ коммитьте файл .env в git!
+
+# ==========================================
+# REQUIRED SETTINGS
+# ==========================================
 
 # Telegram Bot Configuration
 # Получите токен у @BotFather в Telegram
@@ -13,22 +17,64 @@ BOT_TOKEN=your_bot_token_here
 
 # Web App URL
 # URL вашего Telegram Mini App (опубликованного на GitHub Pages)
-WEB_APP_URL=https://zhoasss.github.io/frontend/index.html
+WEB_APP_URL=https://zhoasss.github.io
 
-# Database Configuration (опционально для production)
+# ==========================================
+# OPTIONAL SETTINGS
+# ==========================================
+
+# Environment (development, testing, production)
+ENVIRONMENT=development
+
+# Server Configuration
+HOST=0.0.0.0
+PORT=8000
+DEBUG=true
+RELOAD=true
+
+# Database Configuration
 # По умолчанию используется SQLite (database.db)
 # Для production рекомендуется PostgreSQL:
-# DATABASE_URL=postgresql+asyncpg://user:password@localhost/dbname
+# DATABASE_URL=postgresql+asyncpg://user:password@host:port/database
+DATABASE_URL=sqlite+aiosqlite:///app/data/database.db
+DB_ECHO=false
 
-# API Configuration (опционально)
-# API_HOST=0.0.0.0
-# API_PORT=8000
+# JWT Configuration
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Environment (опционально)
-# development | production
+# CORS Configuration
+CORS_ORIGINS=https://zhoasss.github.io,http://localhost:5173,http://localhost:3000
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=/app/data/api.log
+LOG_MAX_BYTES=10485760  # 10MB
+LOG_BACKUP_COUNT=5
+
+# Data Directory
+DATA_DIR=/app/data
+
+# ==========================================
+# DEVELOPMENT SPECIFIC
+# ==========================================
+
+# Для локальной разработки:
 # ENVIRONMENT=development
+# DEBUG=true
+# RELOAD=true
+# LOG_LEVEL=DEBUG
 
-# Logging (опционально)
+# ==========================================
+# PRODUCTION SPECIFIC
+# ==========================================
+
+# Для production развертывания:
+# ENVIRONMENT=production
 # DEBUG=false
-# LOG_LEVEL=INFO
+# RELOAD=false
+# LOG_LEVEL=WARNING
+# JWT_SECRET_KEY=your-production-secret-key
+# DATABASE_URL=postgresql://user:password@host:port/database
 
