--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,25 @@
-python-telegram-bot==21.0.1
-python-dotenv==1.0.0
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
+# Core dependencies
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+pydantic==2.10.3
+pydantic-settings==2.7.0
+
+# Database
 sqlalchemy==2.0.36
 aiosqlite==0.20.0
+alembic==1.14.0
+
+# Authentication & Security
+PyJWT==2.10.1
+python-multipart==0.0.17
+
+# Telegram Bot
+python-telegram-bot==21.7
+
+# Configuration & Environment
+python-dotenv==1.0.1
+
+# Additional utilities
 greenlet==3.1.1
+email-validator==2.2.0
 
