fix: исправление ошибок запуска приложений
- Замена regex на pattern в Pydantic моделях (Pydantic v2)
- Улучшение разрешений для директории data в Dockerfile
- Исправление логики инициализации в main.py для использования config
- Установка правильных прав доступа к файлам логов

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -49,8 +49,10 @@ WORKDIR /app
 # Copy application code with proper ownership
 COPY --chown=appuser:appuser . .
 
-# Create data directory
-RUN mkdir -p /app/data && chown -R appuser:appuser /app/data
+# Create data directory with proper permissions
+RUN mkdir -p /app/data && \
+    chown -R appuser:appuser /app/data && \
+    chmod -R 755 /app/data
 
 # Switch to non-root user
 USER appuser
