--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -52,7 +52,16 @@ COPY --chown=appuser:appuser . .
 # Create data directory with proper permissions
 RUN mkdir -p /app/data && \
     chown -R appuser:appuser /app/data && \
-    chmod -R 755 /app/data
+    chmod -R 777 /app/data
+
+# Create an entrypoint script to handle permissions
+RUN echo '#!/bin/bash\n\
+# Ensure data directory has proper permissions\n\
+mkdir -p /app/data\n\
+chmod -R 777 /app/data\n\
+\n\
+# Execute the main command\n\
+exec "$@"' > /entrypoint.sh && chmod +x /entrypoint.sh
 
 # Switch to non-root user
 USER appuser
@@ -65,4 +74,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Run the API server
+ENTRYPOINT ["/entrypoint.sh"]
 CMD ["python", "api_server.py"]
