fix: исправление проблем с правами доступа к Docker volumes
- Запуск backend и bot сервисов как root для совместного доступа к volume
- Упрощение Dockerfile без entrypoint script и non-root user
- Решение проблемы 'Operation not permitted' при работе с Docker volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - app-network
     depends_on:
       - db
+    user: root
     healthcheck:
       test: ["CMD", "python", "-c", "import socket; s=socket.socket(); s.connect(('localhost', 8000)); s.close()"]
       interval: 30s
@@ -62,6 +63,7 @@ services:
       - app-network
     depends_on:
       - backend
+    user: root
     command: ["python", "main.py"]
 
   # Database (SQLite file-based, but could be replaced with PostgreSQL)
