--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ FROM nginx:alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy frontend files
-COPY frontend/ /usr/share/nginx/html/
+COPY . /usr/share/nginx/html/
 
 # Expose port
 EXPOSE 80
