--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,85 @@
-# HTTP to HTTPS redirect
+# HTTP to HTTPS redirect for domain
 server {
     listen 80;
     server_name booking-cab.ru www.booking-cab.ru;
     return 301 https://$server_name$request_uri;
+}
+
+# Local development server (HTTP only)
+server {
+    listen 80;
+    server_name localhost 127.0.0.1;
+
+    # Root directory for static files
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Enable gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json;
+
+    # API proxy to backend
+    location /api/ {
+        # Логирование API запросов
+        access_log /var/log/nginx/api_access.log;
+        error_log /var/log/nginx/api_error.log;
+
+        proxy_pass http://backend:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+
+        # CORS headers for API (local development)
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, X-Init-Data, Authorization" always;
+        add_header Access-Control-Allow-Credentials true always;
+
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
+    # Static files with caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Main application - SPA routing
+    location / {
+        try_files $uri $uri/ /index.html;
+
+        # Disable caching for HTML files
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+    }
+
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
 }
 
 # HTTPS server
