--- a/nginx.conf
+++ b/nginx.conf
@@ -42,6 +42,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Проброс cookies от backend к клиенту
+        proxy_pass_header Set-Cookie;
+        proxy_cookie_path / /;
+        proxy_cookie_domain backend $host;
 
         # CORS headers for API (local development)
         add_header Access-Control-Allow-Origin * always;
@@ -139,6 +144,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Проброс cookies от backend к клиенту
+        proxy_pass_header Set-Cookie;
+        proxy_cookie_path / /;
+        proxy_cookie_domain backend $host;
 
         # CORS headers for API
         # CORS for Telegram Web App and browser
