--- a/nginx.conf
+++ b/nginx.conf
@@ -43,14 +43,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        # Проброс cookies от backend к клиенту
-        proxy_pass_header Set-Cookie;
-
-        # CORS headers for API (local development)
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Content-Type, X-Init-Data, Authorization" always;
-        add_header Access-Control-Allow-Credentials true always;
+        # Проброс всех заголовков от backend, включая Set-Cookie и CORS
+        # CORS уже настроен на backend (FastAPI CORSMiddleware)
 
         # Handle preflight requests
         if ($request_method = 'OPTIONS') {
@@ -143,41 +137,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        # Проброс cookies от backend к клиенту
-        proxy_pass_header Set-Cookie;
-
-        # CORS headers for API
-        # CORS for Telegram Web App and browser
-        set $cors_origin "";
-        if ($http_origin ~* "^https?://(.*\.)?telegram\.org$") {
-            set $cors_origin $http_origin;
-        }
-        if ($http_origin ~* "^https?://(.*\.)?telegram\.me$") {
-            set $cors_origin $http_origin;
-        }
-        if ($http_origin ~* "^https?://(.*\.)?t\.me$") {
-            set $cors_origin $http_origin;
-        }
-        if ($http_origin ~* "^https?://web\.telegram\.org$") {
-            set $cors_origin $http_origin;
-        }
-        if ($http_origin ~* "^https?://(.*\.)?web\.telegram\.org$") {
-            set $cors_origin $http_origin;
-        }
-        if ($http_origin = "https://booking-cab.ru") {
-            set $cors_origin $http_origin;
-        }
-        if ($http_origin = "http://localhost:8000") {
-            set $cors_origin $http_origin;
-        }
-        if ($cors_origin = "") {
-            set $cors_origin "*";
-        }
-
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Content-Type, X-Init-Data, Authorization" always;
-        add_header Access-Control-Allow-Credentials true always;
+        # Проброс всех заголовков от backend, включая Set-Cookie и CORS
+        # CORS уже настроен на backend (FastAPI CORSMiddleware)
+        # add_header удаляет заголовки от backend, поэтому НЕ используем его здесь
 
         # Handle preflight requests
         if ($request_method = 'OPTIONS') {
