fix: Отключение кэширования JS/CSS в nginx.conf
- Разделена конфигурация статики: изображения кэшируются, скрипты и стили - нет (no-cache)
- Это гарантирует, что клиенты будут получать обновления кода немедленно

--- a/nginx.conf
+++ b/nginx.conf
@@ -52,10 +52,18 @@ server {
         }
     }
 
-    # Static files with caching
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Static files (images, fonts) with caching
+    location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # JS and CSS - disable caching to ensure updates are applied
+    location ~* \.(js|css)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
         try_files $uri =404;
     }
 
@@ -147,10 +155,18 @@ server {
         }
     }
 
-    # Static files with caching
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Static files (images, fonts) with caching
+    location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # JS and CSS - disable caching to ensure updates are applied
+    location ~* \.(js|css)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
         try_files $uri =404;
     }
 
