fix: add nginx routing for public booking page

--- a/nginx.conf
+++ b/nginx.conf
@@ -67,6 +67,18 @@ server {
         try_files $uri =404;
     }
 
+    # Public Booking Page
+    location /booking/ {
+        try_files $uri $uri/ /src/pages/booking/index.html;
+        
+        # Disable caching for HTML files
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+    }
+
     # Main application - SPA routing
     location / {
         try_files $uri $uri/ /index.html;
@@ -168,6 +180,18 @@ server {
         add_header Pragma "no-cache";
         add_header Expires "0";
         try_files $uri =404;
+    }
+
+    # Public Booking Page
+    location /booking/ {
+        try_files $uri $uri/ /src/pages/booking/index.html;
+        
+        # Disable caching for HTML files
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
     }
 
     # Main application - SPA routing
