feat: implement Telegram Web App deep linking for bookings

--- a/backend/env.example
+++ b/backend/env.example
@@ -15,6 +15,10 @@
 # Получите токен у @BotFather в Telegram
 BOT_TOKEN=your_bot_token_here
 
+# Username вашего бота (без @)
+# Например, если ваш бот @MyBookingBot, то укажите: MyBookingBot
+BOT_USERNAME=your_bot_username
+
 # Web App URL
 # URL вашего Telegram Mini App (опубликованного на GitHub Pages)
 WEB_APP_URL=https://zhoasss.github.io
