--- a/docker-env.example
+++ b/docker-env.example
@@ -4,6 +4,9 @@
 # Telegram Bot Token (get from @BotFather)
 BOT_TOKEN=your_bot_token_here
 
+# Bot Username (without @)
+BOT_USERNAME=your_bot_username
+
 # Web App URL (for production, use your domain)
 WEB_APP_URL=https://booking-cab.ru
 
