feat: Add dual-bot system with separate client booking bot
- Add CLIENT_BOT_TOKEN and CLIENT_BOT_USERNAME configuration
- Create client_bot.py for dedicated client booking bot
- Update telegram_auth to support multiple bot tokens
- Modify booking link generation to use client bot
- Add docker-compose service for client-bot
- Create comprehensive documentation in DUAL_BOT_SYSTEM.md

--- a/backend/env.example
+++ b/backend/env.example
@@ -19,6 +19,11 @@ BOT_TOKEN=your_bot_token_here
 # Например, если ваш бот @MyBookingBot, то укажите: MyBookingBot
 BOT_USERNAME=your_bot_username
 
+# Client Bot Configuration (OPTIONAL - для отдельного бота записи клиентов)
+# Если не указано, будет использоваться основной бот
+CLIENT_BOT_TOKEN=your_client_bot_token_here
+CLIENT_BOT_USERNAME=your_client_bot_username
+
 # Web App URL
 # URL вашего Telegram Mini App (опубликованного на GitHub Pages)
 WEB_APP_URL=https://zhoasss.github.io
